intTests/test_saw_submodule_import/testGoodImport4.saw
// Exercise more of the `import submodule` variances.

import "D.cry";

import submodule D2 hiding (d2, D2TySy);


// test 1: check we can access names not hid:

print {{D3::d3 }};
print {{0 : D3::D3TySy }};


// test 2: ensure hidden symbols are hiddden:

fails ( do { print {{d2}}; } );
fails ( do { print {{0 : D2TySy}}; } );

print "done";
